--- a/MeetingHand/index.html
+++ b/MeetingHand/index.html
@@ -20,34 +20,40 @@
         
        <div id="app"> 
         <div class="amount-div">
-            <span>Regular</span><span>{{ amount }}</span>     
+            <span>Regular</span><span>$ 40.00</span>     
         </div>    
             <!-- step 1 the form field -->
-                    <form v-if="step == 1" class="mt-3">
-                        <div class="form-group">
-                            <label for="nome">First Name: </label>
-                            <input required class="form-control" type="text" id="nome" v-model="member.name" autocomplete="off" required/>
+                    <form class="mt-3">
+                        <div  v-if="step == 1"  class="row">
+                            <div class="form-group  col-lg-6">
+                                <label for="nome">First Name: </label>
+                                <input required class="form-control" type="text" id="nome" v-model="member.name" autocomplete="off" required/>
+                            </div>
+                            <div class="lastname input  col-lg-6">
+                                <label for="lastname">Last Name: </label>
+                                <input required class="form-control" type="text" id="lastname" v-model="member.lastname" autocomplete="off" required>
+                            </div>
+                            <div class="email col-lg-12">
+                                <label class="email" for="email">Email:</label>   
+                                <input required aria-describedby="emailHelp" class="form-control" type="email" id="email" v-model="member.email" autocomplete="off" required>  
+                            </div> 
                         </div>
-                        <div class="lastname input">
-                            <label for="lastname">Last Name: </label>
-                            <input required class="form-control" type="text" id="lastname" v-model="member.lastname" autocomplete="off" required>
-                        </div>
-                        <div class="email input">
-                            <label class="email" for="email">Email:</label>   
-                            <input required aria-describedby="emailHelp" class="form-control" type="email" id="email" v-model="member.email" autocomplete="off" required>  
-                        </div> 
-                      <!-- step 2 amount -->
-                  </form>
-
+                   </form>
+                     <!-- step 2 amount -->
+                     <div v-if="step == 2" class="fees-div">
+                        <span> ${{amount}}<button v-on:click="amount *= 2" class="btn"><i class="fas fa-plus-square"></i></button></span>
+                    </div>
                   <!-- step 3 display the members -->
                 <div  v-if="step == 3" class="step3">
+                    <div class="fees-div">
+                        <span> ${{amount}}</span>
+                    </div>
                     <table class="table">
                         <thead>
                         <tr>
                             <th scope="col">First Name:</th>
                             <th scope="col">Last Name</th>
                             <th scope="col">Email</th>
-                            <th scope="col">Amount</th>
 
                         </tr>
                         </thead>    
