--- a/MeetingHand/index.html
+++ b/MeetingHand/index.html
@@ -27,7 +27,10 @@
                         <div  v-if="step == 1"  class="row">
                             <div class="form-group  col-lg-6">
                                 <label for="nome">First Name: </label>
-                                <input required class="form-control" type="text" id="nome" v-model="member.name" autocomplete="off" required/>
+                                <input 
+                                required class="form-control" 
+                                type="text" id="nome"
+                                 v-model="member.name" required/>
                             </div>
                             <div class="lastname input  col-lg-6">
                                 <label for="lastname">Last Name: </label>
