--- a/MeetingHand/index.html
+++ b/MeetingHand/index.html
@@ -20,7 +20,7 @@
         
        <div id="app"> 
         <div class="amount-div">
-            <span>Regular</span><span>$ 40.00</span>     
+            <span>Regular</span><span>$ {{ amount }}</span>     
         </div>    
             <!-- step 1 the form field -->
                     <form class="mt-3">
@@ -48,30 +48,24 @@
                     </div>
                   <!-- step 3 display the members -->
                 <div  v-if="step == 3" class="step3">
-                    <div class="fees-div">
-                        <span>
-                            <ul style="list-style: none;">
-                                <li  v-for="fee in fees">{{ fee }}</li>
-                            </ul>
-                        </span>
-                    </div>
                     <table class="table">
                         <thead>
                         <tr>
-                            <th scope="col">First Name:</th>
+                            <!-- <th scope="col">First Name:</th>
                             <th scope="col">Last Name</th>
-                            <th scope="col">Email</th>
+                            <th scope="col">Email</th> -->
 
                         </tr>
                         </thead>    
                         <tbody>
                         <tr v-for="p in members"
                             v-bind:key="p.id">
-                            <td>{{p.name}}</td>
-                            <td>{{p.lastname}}</td>
-                            <td>{{p.email}}</td>
+                            <td> 
+                                <small>Regisitran Detials</small> 
+                                <br>
+                                <strong>{{p.name}} {{p.lastname}} </strong><span class="ml-5 pl-5" v-if="p.name"> Amount: {{ amount }}</span>
+                            </td>
                             <!-- <td>{{amount}}</td> -->
-                        
                         </tr>
                         </tbody>
                     </table>
